--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile"> 
         <div class="section__pic-container">
-            <img src="/DAV.png" alt="David ABOKY profil picture">
+            <img src="DAV.png" alt="David ABOKY profil picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
